--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "dist/bundle.js",
   "scripts": {
     "test": "./node_modules/.bin/eslint --ext .js --ext .jsx .",
-    "build": "./node_modules/.bin/webpack",
-    "postinstall": "npm run build"
+    "build": "./node_modules/.bin/webpack"
   },
   "repository": {
     "type": "git",
