--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/bundle.js",
   "scripts": {
     "test": "./node_modules/.bin/eslint --ext .js --ext .jsx .",
-    "build": "./node_modules/.bin/webpack"
+    "build": "./node_modules/.bin/webpack",
+    "dev": "./node_modules/.bin/webpack --watch"
   },
   "repository": {
     "type": "git",
