--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "aqueduct-components",
   "version": "0.1.2",
   "description": "A collection of components to use in Aqueduct's project",
-  "main": "dist/bundle.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "./node_modules/.bin/eslint --ext .js --ext .jsx .",
     "build": "./node_modules/.bin/webpack",
