--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
   },
   "homepage": "https://github.com/Vizzuality/aqueduct-components",
   "dependencies": {
+    "classnames": "^2.2.5",
+    "lodash": "^4.17.4",
     "react": "^15.4.2"
   },
   "devDependencies": {
     "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-3": "^6.22.0",
+    "classnames": "^2.2.5",
     "del": "^2.2.2",
     "eslint": "^3.15.0",
     "eslint-config-vizzuality": "^1.0.3",
