--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "lodash": "^4.17.4",
-    "react": "^15.4.2"
+    "react": "^15.4.2",
+    "react-responsive": "^1.2.6",
+    "react-router": "^3.0.2",
+    "vega": "2.5.2"
   },
   "devDependencies": {
     "babel-preset-latest": "^6.22.0",
