--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/Vizzuality/aqueduct-components",
   "dependencies": {
     "classnames": "^2.2.5",
+    "leaflet": "^1.0.2",
     "lodash": "^4.17.4",
     "react": "^15.4.2",
     "react-responsive": "^1.2.6",
