--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "classnames": "^2.2.5",
     "leaflet": "^1.0.2",
     "lodash": "^4.17.4",
+    "prop-types": "^15.5.8",
     "react": "^15.4.2",
     "react-responsive": "^1.2.6",
     "react-router": "^3.0.2",
