--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
   },
   "extends": "vizzuality",
   "rules": {
+    "no-unused-expressions": 0,
     "jsx-a11y/no-static-element-interactions": 0
   }
 }
