--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/Vizzuality/aqueduct-components",
   "dependencies": {
     "classnames": "^2.2.5",
+    "clipboard": "^1.6.1",
     "leaflet": "^1.0.2",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.8",
