--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vega": "2.5.2"
   },
   "devDependencies": {
+    "babel-preset-env": "^1.4.0",
     "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-3": "^6.22.0",
