--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "clipboard": "^1.6.1",
+    "d3-format": "^1.2.0",
     "leaflet": "^1.0.2",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.8",
@@ -34,7 +35,6 @@
     "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-3": "^6.22.0",
-    "classnames": "^2.2.5",
     "del": "^2.2.2",
     "eslint": "^3.15.0",
     "eslint-config-vizzuality": "^1.0.3",
