--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clipboard": "^1.6.1",
     "leaflet": "^1.0.2",
     "lodash": "^4.17.4",
+    "natives": "^1.1.0",
     "prop-types": "^15.5.8",
     "react": "^15.4.2",
     "react-responsive": "^1.2.6",
