--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "babel-preset-stage-3": "^6.22.0",
     "del": "^2.2.2",
     "eslint": "^3.15.0",
-    "eslint-config-vizzuality": "^1.0.3",
+    "eslint-config-vizzuality": "1.0.3",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2"
   }
