Avoids unnecessary marker load

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,5 +18,8 @@
   },
   "extends": [
     "vizzuality"
-  ]
+  ],
+  "rules": {
+    "no-underscore-dangle": ["error", { "allowAfterThis": true }]
+  }
 }
