--- a/package.json
+++ b/package.json
@@ -27,18 +27,18 @@
     "natives": "^1.1.0",
     "prop-types": "^15.5.8",
     "react": "^15.4.2",
-    "react-responsive": "^1.2.6",
+    "react-responsive": "^1.3.4",
     "react-router": "^3.0.2",
     "vega": "2.5.2"
   },
   "devDependencies": {
-    "babel-preset-env": "^1.4.0",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-3": "^6.22.0",
     "del": "^2.2.2",
-    "eslint": "^3.15.0",
-    "eslint-config-vizzuality": "1.0.3",
+    "eslint": "^3.19.0",
+    "eslint-config-vizzuality": "^1.0.5",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2"
   }
