--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "A collection of components to use in Aqueduct's project",
   "main": "lib/index.js",
   "scripts": {
-    "test": "./node_modules/.bin/eslint --ext .js --ext .jsx .",
-    "build": "./node_modules/.bin/gulp dist",
-    "dev": "./node_modules/.bin/gulp dev"
+    "test": "eslint --ext .js --ext .jsx .",
+    "build": "webpack",
+    "clean": "rm -rf ./lib",
+    "dev": "npm run clean && webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -27,19 +28,27 @@
     "natives": "^1.1.0",
     "prop-types": "^15.5.8",
     "react": "^15.4.2",
-    "react-responsive": "^1.3.4",
+    "react-responsive": "^1.2.6",
     "react-router": "^3.0.2",
     "vega": "2.5.2"
   },
   "devDependencies": {
+    "node-sass": "^4.5.3",
+    "babel-core": "^6.25.0",
+    "babel-plugin-add-react-displayname": "^0.0.4",
+    "babel-loader": "^7.1.1",
+    "file-loader": "^0.11.2",
+    "postcss-loader": "^2.0.6",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
     "babel-preset-env": "^1.6.0",
     "babel-preset-latest": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-3": "^6.22.0",
-    "del": "^2.2.2",
-    "eslint": "^3.19.0",
-    "eslint-config-vizzuality": "^1.0.5",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2"
+    "eslint": "^3.15.0",
+    "eslint-config-vizzuality": "1.0.3",
+    "webpack": "^3.3.0"
   }
 }
