removes lib files and adds build step to postinstall

--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "lib/index.js",
   "scripts": {
     "test": "eslint --ext .js --ext .jsx .",
-    "build": "webpack",
+    "build": "npm run clean && webpack",
     "clean": "rm -rf ./lib",
-    "dev": "npm run clean && webpack --watch"
+    "dev": "npm run clean && webpack --watch",
+    "postinstall": "npm run build"
   },
   "repository": {
     "type": "git",
