--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "aqueduct-components",
-  "version": "0.1.4",
+  "version": "1.0.0",
   "description": "A collection of components to use in Aqueduct's project",
   "main": "lib/index.js",
   "scripts": {
-    "test": "eslint --ext .js --ext .jsx .",
-    "build": "npm run clean && webpack",
-    "clean": "rm -rf ./lib",
-    "dev": "npm run clean && webpack --watch"
+    "start": "yarn run styleguide",
+    "styleguide": "styleguidist server",
+    "styleguide:build": "styleguidist build",
+    "test": "eslint --ext .js --ext .jsx ."
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Vizzuality/aqueduct-components"
   },
-  "author": "Óscar Ferrándiz <oscar.ferrandiz@vizzuality.com>",
+  "author": "Andrés González <andres.gonzalez@vizzuality.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Vizzuality/aqueduct-components"
@@ -21,35 +21,44 @@
   "homepage": "https://github.com/Vizzuality/aqueduct-components",
   "dependencies": {
     "classnames": "^2.2.5",
-    "clipboard": "^1.6.1",
+    "clipboard": "^2.0.1",
     "d3-format": "^1.2.0",
     "leaflet": "^1.1.0",
     "lodash": "^4.17.4",
     "natives": "^1.1.0",
     "prop-types": "^15.5.8",
-    "react": "^15.4.2",
-    "react-responsive": "^1.2.6",
-    "react-router": "^3.0.2",
-    "vega": "2.5.2"
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-responsive": "^5.0.0",
+    "react-router": "^4.3.1",
+    "react-styleguidist": "7.1.0",
+    "vega": "4.1.0",
+    "webpack-bundle-analyzer": "2.13.1"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
+    "babel-eslint": "^8.2.6",
     "babel-loader": "^7.1.1",
-    "babel-plugin-add-react-displayname": "^0.0.4",
+    "babel-plugin-module-resolver": "^3.1.1",
     "babel-preset-env": "^1.6.0",
     "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "babel-preset-stage-3": "^6.22.0",
-    "eslint": "^3.15.0",
-    "eslint-config-vizzuality": "1.0.3",
-    "file-loader": "^0.11.2",
+    "eslint": "^5.1.0",
+    "eslint-config-vizzuality": "1.0.14",
+    "eslint-import-resolver-babel-module": "^4.0.0",
+    "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.9.1",
+    "file-loader": "^1.1.11",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
-    "url-loader": "^0.5.9",
-    "webpack": "^3.3.0"
+    "resolve-url-loader": "^2.3.0",
+    "sass-loader": "^7.0.3",
+    "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.16.1"
   },
   "engines": {
     "node": "8.11.2"
