--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "yarn run styleguide",
     "styleguide": "styleguidist server",
     "styleguide:build": "styleguidist build",
-    "test": "eslint --ext .js --ext .jsx ."
+    "test": "eslint --ext .js --ext .jsx .",
+    "deploy": "gh-pages -d styleguide"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
     "classnames": "^2.2.5",
     "clipboard": "^2.0.1",
     "d3-format": "^1.2.0",
+    "gh-pages": "^1.2.0",
     "leaflet": "^1.1.0",
     "lodash": "^4.17.4",
     "natives": "^1.1.0",
