--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
     "react": "^16.4.1",
     "react-css-modules": "^4.7.4",
     "react-dom": "^16.4.1",
+    "react-dom-factories": "^1.0.2",
     "react-responsive": "^5.0.0",
     "react-router": "^4.3.1",
+    "react-select": "2.0.0",
     "react-styleguidist": "7.1.0",
+    "react-transition-group": "^1.1.2",
     "vega": "4.1.0",
     "webpack-bundle-analyzer": "2.13.1"
   },
