--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "aqueduct-components",
   "version": "1.0.0",
   "description": "A collection of components to use in Aqueduct's project",
-  "main": "lib/index.js",
+  "main": "dist/bundle.js",
   "scripts": {
     "start": "yarn run styleguide",
     "styleguide": "styleguidist server",
     "styleguide:build": "styleguidist build",
+    "components:watch": "webpack --colors --progress --watch",
+    "components:build": "webpack --colors --progress",
     "test": "eslint --ext .js --ext .jsx .",
     "deploy": "yarn run styleguide:build && gh-pages -d styleguide"
   },
@@ -39,6 +41,7 @@
     "react-select": "2.0.0",
     "react-styleguidist": "7.1.0",
     "react-transition-group": "^1.1.2",
+    "uglifyjs-webpack-plugin": "^1.2.7",
     "vega": "4.1.0",
     "webpack-bundle-analyzer": "2.13.1"
   },
@@ -51,6 +54,7 @@
     "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "compression-webpack-plugin": "^1.1.11",
     "eslint": "^5.1.0",
     "eslint-config-vizzuality": "1.0.14",
     "eslint-import-resolver-babel-module": "^4.0.0",
@@ -58,6 +62,7 @@
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.9.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
@@ -65,7 +70,8 @@
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
-    "webpack": "^4.16.1"
+    "webpack": "^4.16.1",
+    "webpack-cli": "^3.1.0"
   },
   "engines": {
     "node": "8.11.2"
