--- a/package.json
+++ b/package.json
@@ -23,17 +23,19 @@
   },
   "homepage": "https://github.com/Vizzuality/aqueduct-components",
   "dependencies": {
+    "babel-plugin-react-css-modules": "^3.4.2",
     "classnames": "^2.2.5",
     "clipboard": "^2.0.1",
     "d3-format": "^1.2.0",
     "gh-pages": "^1.2.0",
     "leaflet": "^1.1.0",
     "lodash": "^4.17.4",
+    "mini-css-extract-plugin": "^0.4.2",
     "natives": "^1.1.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.0",
     "prop-types": "^15.5.8",
     "rc-slider": "^8.6.1",
     "react": "^16.4.2",
-    "react-css-modules": "^4.7.6",
     "react-dom": "^16.4.2",
     "react-dom-factories": "^1.0.2",
     "react-modal": "^3.5.1",
@@ -69,7 +71,8 @@
     "file-loader": "^1.1.11",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
-    "resolve-url-loader": "^2.3.0",
+    "postcss-scss": "^2.0.0",
+    "resolve-url-loader": "^3.0.0-alpha.1",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
