--- a/package.json
+++ b/package.json
@@ -67,11 +67,11 @@
     "eslint-plugin-react": "^7.9.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
+    "isomorphic-style-loader": "^4.0.0",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
     "resolve-url-loader": "^2.3.0",
     "sass-loader": "^7.0.3",
-    "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.16.1",
     "webpack-cli": "^3.1.0"
