--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "leaflet": "^1.1.0",
     "lodash": "^4.17.4",
     "natives": "^1.1.0",
-    "prop-types": "^15.5.8",
-    "react": "^15.4.2",
+    "prop-types": "^15.6.2",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "react-responsive": "^1.2.6",
     "react-router": "^3.0.2",
     "vega": "2.5.2"
