--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aqueduct-components",
-  "version": "0.1.4",
+  "version": "0.1.4-legacy",
   "description": "A collection of components to use in Aqueduct's project",
   "main": "lib/index.js",
   "scripts": {
