--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aqueduct-components",
-  "version": "0.1.20",
+  "version": "0.2.0",
   "description": "A collection of components to use in Aqueduct's project",
   "main": "lib/index.js",
   "scripts": {
@@ -26,6 +26,7 @@
     "lodash": "^4.17.4",
     "natives": "^1.1.0",
     "prop-types": "^15.7.2",
+    "rc-tooltip": "^3.7.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-responsive": "^1.2.6",
