--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aqueduct-components",
-  "version": "0.3.15",
+  "version": "0.3.15.7",
   "description": "A collection of components to use in Aqueduct's project",
   "main": "lib/index.js",
   "scripts": {
@@ -27,6 +27,7 @@
     "lodash": "^4.17.4",
     "natives": "^1.1.0",
     "prop-types": "^15.7.2",
+    "rc-slider": "^9.7.2",
     "rc-tooltip": "^3.7.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
